# mlops-reference-implementation

./: .gitignore  README.md  data.dvc  pyproject.toml  requirements.txt
.dvc/: config
dags/: iris_classifier.py
include/bentoml/: bentofile.yaml  service.py
include/docker-compose/: docker-compose.yml
notebooks/: iris_classifier.ipynb  test_predictions.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/0/5a9daad3d79e4305b17d5da35135f08c/: meta.yaml
notebooks/mlruns/0/5a9daad3d79e4305b17d5da35135f08c/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
