[project]
name = "mlops-reference-implementation"
version = "0.1.0"
description = "MLOps reference implementation example"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow>=2.10.5",
    "bentoml>=1.4.6",
    "dvc>=3.59.1",
    "jupyter>=1.1.1",
    "mlflow>=2.21.2",
    "numpy>=2.2.4",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
]
